# the_cookie_lib

./: .gitignore  CMakeLists.txt
include/: bool.h  output.h  the_cookie_lib.h  utils.h
sources/: bool.c  output.c  the_cookie_lib.c  utils.c
